<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_database_information"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_table_rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_table_rows" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonRowClick"
            android:text="@string/button_get_rows" />

        <!--Input data into the database-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_enter_product_information"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_view_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_enter_product_name" />

        <EditText
            android:id="@+id/text_view_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_enter_product_price" />

        <EditText
            android:id="@+id/text_view_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_enter_product_quantity" />

        <EditText
            android:id="@+id/text_view_product_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_enter_supplier_name" />

        <EditText
            android:id="@+id/text_view_product_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_enter_supplier_number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonSaveData"
            android:text="@string/button_save_data" />

        <TextView
            android:id="@+id/textview_table_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />
    </LinearLayout>
</ScrollView>