<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <!--Input data into the database-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/textview_product_information"
            android:textAlignment="center"
            android:textSize="@dimen/h1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_product_name"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/text_view_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_product_price"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/text_view_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_manuf_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_product_manuf"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/text_view_product_supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_product_manuf_phone"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/text_view_product_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_product_quantity"
                    android:textSize="@dimen/text_body" />

                <TextView
                    android:id="@+id/text_view_product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_body" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_product_quantity_increase_amount"
                    android:textSize="@dimen/text_body" />

                <EditText
                    android:id="@+id/edit_text_increase_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:textSize="@dimen/text_body" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buttonReduceQty"
                    android:text="@string/details_minus_sign"
                    android:textSize="@dimen/text_body" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buttonIncreaseQty"
                    android:text="@string/details_plus_sign"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="callContact"
            android:text="@string/activity_details_order_from_supplier"
            android:textSize="@dimen/text_body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_top_margin_large"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonDeleteData"
                android:paddingTop="24dp"
                android:text="@string/delete_record"
                android:textColor="#ff0000"
                android:textSize="@dimen/text_body" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>